2017-09-06  Ola Jeppsson  <ola@adapteva.com>

	* sim-if.c (find_sym): New function.
	(epiphany_user_init): Do not move stack if __stack is a global
	address.

2017-04-09  Ola Jeppsson  <ola@adapteva.com>

	* configure.ac: Do not use += operator for appending to
	variables. It is not Bourne Shell compatible.
	* configure: Regenerated.

2016-11-17  Ola Jeppsson  <ola@adapteva.com>

	* esim/esim.c (es_validate_cluster_cfg): Allow
	non power of two core_phys_mem.
	(es_init_impl): Truncate core_phys_mem to ES_CORE_MMR_BASE.

2016-11-17  Ola Jeppsson  <ola@adapteva.com>

	* sim-if.c (epiphany_user_init): New function.
	(sim_create_inferior): Fix copying of argv. Call epiphany_user_init
	in USER_ENVIRONMENT.

2016-10-27  Ola Jeppsson  <ola@adapteva.com>

	* epiphany-fp.c (float_as_int): Make static inline.
	(int_as_float): Likewise.

2016-10-27  Ola Jeppsson  <ola@adapteva.com>

	* config.in: Regenerated.
	* configure: Regenerated.

2016-10-27  Ola Jeppsson  <ola@adapteva.com>

	* arch.c: Regenerated.
	* arch.h: Regenerated.
	* cpu.c: Regenerated.
	* cpu.h: Regenerated.
	* cpuall.h: Regenerated.
	* decode.c: Regenerated.
	* decode.h: Regenerated.
	* model.c: Regenerated.
	* sem-switch.c: Regenerated.
	* sem.c: Regenerated.

2016-10-27  Ola Jeppsson  <ola@adapteva.com>

	* Makefile.in (SIM_EXTRA_CFLAGS): Append @esim_cflags@
	* configure.ac: Delete --enable-sim-cflags and sim_cflags.
	Substitute esim_cflags directly.
	(SIM_AC_OPTION_ENDIAN): Change LITTLE_ENDIAN to LITTLE.
	(SIM_AC_OPTION_HOSTENDIAN): Remove.
	* sim-if.c (free_state): Restore sd->cpu from sd->orig_cpu.
	(sim_esim_cpu_relocate): Save originally allocated cpu to
	sd->orig_cpu.
	(sim_open): Mark argv const.
	(sim_create_inferior): Mark argv and envp const.
	(sim_close): Rename from ...
	(epiphany_sim_close): ... to. Don't do things generic sim_close()
	already does. Restore sd->cpu from sd->orig_cpu. Fake things for
	generic sim_close ().
	* sim-main.h (SIM_CLOSE_HOOK): Added.
	(sim_state): Add orig_cpu.
